--- a/ServeurCarto/ServeurCarto/ServeurCarto.vcxproj.filters
+++ b/ServeurCarto/ServeurCarto/ServeurCarto.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="IHM.cpp">
       <Filter>Fichiers sources\SRC</Filter>
     </ClCompile>
+    <ClCompile Include="Fenetre.cpp">
+      <Filter>Fichiers sources\SRC</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core.h">
