--- a/ServeurCarto/ServeurCarto/ServeurCarto.vcxproj.filters
+++ b/ServeurCarto/ServeurCarto/ServeurCarto.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="IHM.cpp">
       <Filter>Fichiers sources\SRC</Filter>
     </ClCompile>
-    <ClCompile Include="Fenetre.cpp">
+    <ClCompile Include="Data.cpp">
       <Filter>Fichiers sources\SRC</Filter>
     </ClCompile>
   </ItemGroup>
